<resources>
    <string name="app_name">DomoDoorApplication</string>
    <string name="ouvrir">Ouverture</string>
    <string name="quitter">Quittez</string>
    <string name="urgence">Urgence</string>
    <string name="reprise">Reprise Clé</string>accessForbidden
    <string name="fermer">Fermeture</string>
    <string name="accessForbidden">Vous n\'avez pas accès à ce controleur, contactez l\'administrateur</string>
    <string name="entrer_mac_adresse">Entrez l\'EV3 mac adresse</string>
    <string name="ok">OK</string>
    <string name="Preference">ev3 preference</string>
    <string name="EV3_key">ev3_mac_adresse</string>
    <string name="avancer">avancer</string>
    <string name="reculer">reculer</string>
    <string name="droite">droite</string>
    <string name="gauche">gauche</string>
    <string name="accelerer">accelerer</string>
    <string name="ralentir">ralentir</string>
    <string name="exit">quitter</string>
    <string name="enable_bt">Autorisez le bluetooth</string>
    <string name="autoriser">Autoriser</string>
    <string name="cancel">Cancel</string>
    <string name="bt_failed">Impossible de se connecter à cette adresse</string>
    <string name="bt_disabled">Autorisez le bluetooth pour continuer</string>
    <string name="title_activity_speedometer">Speedometer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wheel">Wheel</string>

</resources>
