<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="androidproject.domodoorapplication.MainActivity">

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/ouvrir"
       android:id="@+id/ouvrir"
       android:layout_centerHorizontal="true"/>

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/fermer"
       android:id="@+id/fermer"
       android:layout_below="@+id/ouvrir"
       android:layout_centerHorizontal="true" />
   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/urgence"
       android:id="@+id/urgence"
       android:layout_below="@+id/fermer"
       android:layout_centerHorizontal="true" />
   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/reprise"
       android:id="@+id/reprise"
       android:layout_below="@+id/urgence"
       android:layout_centerHorizontal="true" />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/quitter"
       android:id="@+id/quitter"
       android:layout_below="@+id/reprise"
       android:layout_centerHorizontal="true" />


</RelativeLayout>
